version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Core/Utilities/NamedCollection.rst.txt
.. vale off



:class:`NamedCollection`
========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Core.Utilities.NamedCollection(list: List[T])

   Bases: :py:obj:`object`


   
   Represents a collection of INamed objects that could be found by its Name field.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NamedCollection

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Contains`
            - Contains method.
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~IndexOf`
            - IndexOf method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Count property.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~Names`
            - Names property.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Count property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[T]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Names
   :type: Optional[System.Collections.ObjectModel.ReadOnlyCollection[str]]


   
   Names property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Contains(value: T) -> bool

   
   Contains method.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(array: T, index: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[T]

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: IndexOf(value: T) -> int

   
   IndexOf method.

   ..
       !! processed by numpydoc !!



.. vale on